Test: updateAuthAndTeam_test(AdminService) 테스트 완료