@@ -1,6 +1,5 @@
 package smash.teams.be.service;
 
-import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -9,8 +8,6 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.context.ActiveProfiles;
 import smash.teams.be.core.dummy.DummyEntity;
-import smash.teams.be.dto.admin.AdminRequest;
-import smash.teams.be.dto.admin.AdminResponse;
 import smash.teams.be.model.team.Team;
 import smash.teams.be.model.team.TeamRepository;
 import smash.teams.be.model.user.Role;
@@ -21,7 +18,11 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
+import static smash.teams.be.dto.admin.AdminRequest.AddInDTO;
+import static smash.teams.be.dto.admin.AdminResponse.AddOutDTO;
+import static smash.teams.be.dto.admin.AdminResponse.GetAdminPageOutDTO;
 
 @ActiveProfiles("test")
 @ExtendWith(MockitoExtension.class)
@@ -39,7 +40,7 @@ public class AdminServiceTest extends DummyEntity {
     @Test
     public void add_test() {
         // given
-        AdminRequest.AddInDTO addInDTO = new AdminRequest.AddInDTO();
+        AddInDTO addInDTO = new AddInDTO();
         addInDTO.setTeamName("회계팀");
 
         // stub
@@ -47,17 +48,17 @@ public class AdminServiceTest extends DummyEntity {
         Mockito.when(teamRepository.save(any())).thenReturn(newMockTeam(4L, "회계팀"));
 
         // when
-        AdminResponse.AddOutDTO addOutDTO = adminService.add(addInDTO);
+        AddOutDTO addOutDTO = adminService.add(addInDTO);
 
         // then
-        Assertions.assertThat(addOutDTO.getTeamId()).isEqualTo(4L);
-        Assertions.assertThat(addOutDTO.getTeamName()).isEqualTo("회계팀");
-        Assertions.assertThat(addOutDTO.getTeamCount()).isEqualTo(0);
+        assertThat(addOutDTO.getTeamId()).isEqualTo(4L);
+        assertThat(addOutDTO.getTeamName()).isEqualTo("회계팀");
+        assertThat(addOutDTO.getTeamCount()).isEqualTo(0);
     }
 
     @Test
     public void getAdminPage_test() {
-        // given1
+        // given
         String teamName = "개발팀";
         String keyword = "이";
         String page = "0";
@@ -78,46 +79,70 @@ public class AdminServiceTest extends DummyEntity {
         Mockito.when(userRepository.calculateCountByTeamId(anyLong())).thenReturn(3);
 
         // when
-        AdminResponse.GetAdminPageOutDTO getAdminPageOutDTO = adminService.getAdminPage(teamName, keyword, Integer.parseInt(page));
+        GetAdminPageOutDTO getAdminPageOutDTO = adminService.getAdminPage(teamName, keyword, Integer.parseInt(page));
 
         // then
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamId()).isEqualTo(1L);
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamName()).isEqualTo("개발팀");
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamCount()).isEqualTo(3);
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamId()).isEqualTo(2L);
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamName()).isEqualTo("회계팀");
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamCount()).isEqualTo(3);
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamId()).isEqualTo(3L);
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamName()).isEqualTo("마케팅팀");
-        Assertions.assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamCount()).isEqualTo(3);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getUserId()).isEqualTo(1L);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getProfileImage()).isEqualTo(null);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getName()).isEqualTo("이승민");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getEmail()).isEqualTo("이승민@gmail.com");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getPhoneNumber()).isEqualTo("010-1234-5678");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(0).getRole()).isEqualTo(Role.USER.getRole());
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getUserId()).isEqualTo(2L);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getProfileImage()).isEqualTo(null);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getName()).isEqualTo("이윤경");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getEmail()).isEqualTo("이윤경@gmail.com");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getPhoneNumber()).isEqualTo("010-1234-5678");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(1).getRole()).isEqualTo(Role.USER.getRole());
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getUserId()).isEqualTo(3L);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getProfileImage()).isEqualTo(null);
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getName()).isEqualTo("이한울");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getEmail()).isEqualTo("이한울@gmail.com");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getPhoneNumber()).isEqualTo("010-1234-5678");
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
-        Assertions.assertThat(getAdminPageOutDTO.getUserList().get(2).getRole()).isEqualTo(Role.USER.getRole());
-        Assertions.assertThat(getAdminPageOutDTO.getSize()).isEqualTo(12);
-        Assertions.assertThat(getAdminPageOutDTO.getTotalElements()).isEqualTo(3L);
-        Assertions.assertThat(getAdminPageOutDTO.getTotalPages()).isEqualTo(1);
-        Assertions.assertThat(getAdminPageOutDTO.getCurPage()).isEqualTo(0);
-        Assertions.assertThat(getAdminPageOutDTO.getFirst()).isEqualTo(true);
-        Assertions.assertThat(getAdminPageOutDTO.getLast()).isEqualTo(true);
-        Assertions.assertThat(getAdminPageOutDTO.getEmpty()).isEqualTo(false);
+        assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamId()).isEqualTo(1L);
+        assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamName()).isEqualTo("개발팀");
+        assertThat(getAdminPageOutDTO.getTeamList().get(0).getTeamCount()).isEqualTo(3);
+        assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamId()).isEqualTo(2L);
+        assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamName()).isEqualTo("회계팀");
+        assertThat(getAdminPageOutDTO.getTeamList().get(1).getTeamCount()).isEqualTo(3);
+        assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamId()).isEqualTo(3L);
+        assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamName()).isEqualTo("마케팅팀");
+        assertThat(getAdminPageOutDTO.getTeamList().get(2).getTeamCount()).isEqualTo(3);
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getUserId()).isEqualTo(1L);
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getProfileImage()).isEqualTo(null);
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getName()).isEqualTo("이승민");
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getEmail()).isEqualTo("이승민@gmail.com");
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getPhoneNumber()).isEqualTo("010-1234-5678");
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
+        assertThat(getAdminPageOutDTO.getUserList().get(0).getRole()).isEqualTo(Role.USER.getRole());
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getUserId()).isEqualTo(2L);
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getProfileImage()).isEqualTo(null);
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getName()).isEqualTo("이윤경");
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getEmail()).isEqualTo("이윤경@gmail.com");
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getPhoneNumber()).isEqualTo("010-1234-5678");
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
+        assertThat(getAdminPageOutDTO.getUserList().get(1).getRole()).isEqualTo(Role.USER.getRole());
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getUserId()).isEqualTo(3L);
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getProfileImage()).isEqualTo(null);
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getName()).isEqualTo("이한울");
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getEmail()).isEqualTo("이한울@gmail.com");
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getPhoneNumber()).isEqualTo("010-1234-5678");
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getStartWork()).isEqualTo(LocalDateTime.now().toLocalDate().toString());
+        assertThat(getAdminPageOutDTO.getUserList().get(2).getRole()).isEqualTo(Role.USER.getRole());
+        assertThat(getAdminPageOutDTO.getSize()).isEqualTo(12);
+        assertThat(getAdminPageOutDTO.getTotalElements()).isEqualTo(3L);
+        assertThat(getAdminPageOutDTO.getTotalPages()).isEqualTo(1);
+        assertThat(getAdminPageOutDTO.getCurPage()).isEqualTo(0);
+        assertThat(getAdminPageOutDTO.getFirst()).isEqualTo(true);
+        assertThat(getAdminPageOutDTO.getLast()).isEqualTo(true);
+        assertThat(getAdminPageOutDTO.getEmpty()).isEqualTo(false);
     }
 
+//    @Test
+//    public void updateAuthAndTeam_test() {
+//        // given
+//        Long id = 1L;
+//
+//        // stub
+//        Team team = newMockTeam(1L, "개발팀");
+//        User user = newMockUserWithTeam(1L, "이승민", team);
+//
+//        Team team2 = newMockTeam(2L, "회계팀");
+//        UpdateAuthAndTeamInDTO updateAuthAndTeamInDTO = new UpdateAuthAndTeamInDTO();
+//        updateAuthAndTeamInDTO.setUserId(id);
+//        updateAuthAndTeamInDTO.setTeamName(team2.getTeamName());
+//        updateAuthAndTeamInDTO.setRole(Role.MANAGER.getRole());
+//        Mockito.when(userRepository.findById(any())).thenReturn(Optional.of(user));
+//        Mockito.when(teamRepository.findByTeamName(any())).thenReturn(Optional.of(team2));
+//
+//        // when
+//        TestUpdateAuthAndTeamOutDTO testUpdateAuthAndTeamOutDTO = adminService.updateAuthAndTeam(updateAuthAndTeamInDTO);
+//
+//        // then
+//        assertThat(testUpdateAuthAndTeamOutDTO.getUser().getTeam().getTeamName()).isEqualTo(team2.getTeamName());
+//        assertThat(testUpdateAuthAndTeamOutDTO.getUser().getRole()).isEqualTo(Role.MANAGER.getRole());
+//    }
 }
